--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlineTut">
+       <activity android:name=".SecondActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
