--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    //id 'kotlin-ksp'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id("androidx.navigation.safeargs")
+    id("dagger.hilt.android.plugin")
+
 }
 
 android {
@@ -17,7 +23,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled  false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,7 +35,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-         viewBinding = true
+         viewBinding  true
     }
 }
 
@@ -47,7 +53,69 @@ dependencies {
     // For control over item selection of both touch and mouse driven selection
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
     implementation 'com.google.android.material:material:1.5.0-alpha04'
+
+    // Architectural Components
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    // Room
+    kapt("androidx.room:room-compiler:2.3.0")
+
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor("androidx.room:room-compiler:2.3.0")
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.2.5"
+
+    // Coroutines
+  //  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
 
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    // Navigation Components
+//    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
+//    implementation "androidx.navigation:navigation-ui-ktx:2.3.0"
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Google Maps Location Services
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    // Dagger Core
+    implementation "com.google.dagger:dagger:2.28.1"
+    kapt "com.google.dagger:dagger-compiler:2.25.2"
+
+    //hilt
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+    // Dagger Android
+    api 'com.google.dagger:dagger-android:2.35.1'
+    api 'com.google.dagger:dagger-android-support:2.28.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+
+    // Easy Permissions
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+
+
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
