--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,8 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.23.2'
 
     // Easy Permissions
-    implementation 'pub.devrel:easypermissions:3.0.0'
+   // implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
