--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,13 @@ dependencies {
     kapt("androidx.hilt:hilt-compiler:1.0.0")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    kapt("androidx.room:room-compiler:2.3.0")
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor("androidx.room:room-compiler:2.3.0")
+    // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.3.0"
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-rc01")
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
 }
 // Allow references to generated code
 kapt {
